--- a/src/app/libs/home-dashboard/src/containers/home-dashboard.component.scss
+++ b/src/app/libs/home-dashboard/src/containers/home-dashboard.component.scss
@@ -1,5 +1,16 @@
 .dashboard {
+    .hint-message {
+        font-style: italic;
+        font-size: 11px;
+        width: 25em;
+    }
+
     .highlight {
         width: fit-content;
+        font-size: 16px
+    }
+
+    .display-left-border {
+        border-left: 1px solid black;
     }
 }
